# todo-phase-1

./: README.md
todo-phase-1/: README.md  pyproject.toml
todo-phase-1/TodoListApp/Data/: TaskDataController.swift
todo-phase-1/TodoListApp/Models/: Filter.swift  SortOrder.swift  Task.swift  TaskPriority.swift
todo-phase-1/TodoListApp/ViewModels/: TaskViewModel.swift
todo-phase-1/TodoListApp/Views/: ContentView.swift  TaskFormView.swift  TaskListView.swift
todo-phase-1/TodoListApp/Views/Components/: CategoryBadge.swift  PriorityIndicator.swift
todo-phase-1/history/prompts/001-todo-cli-app/: 1-execute-implementation-plan.tasks.prompt.md
todo-phase-1/history/prompts/002-todo-organization/: 1-todo-organization-features-spec.spec.prompt.md  2-todo-organization-features-plan.plan.prompt.md  3-todo-organization-features-tasks.tasks.prompt.md
todo-phase-1/history/prompts/constitution/: 1-create-todo-app-constitution.constitution.prompt.md  (+1 more)
todo-phase-1/specs/001-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
todo-phase-1/specs/002-todo-organization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
todo-phase-1/src/cli/: main.py
todo-phase-1/src/models/: task.py
todo-phase-1/src/services/: todo_manager.py
todo-phase-1/src/todo_cli_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
todo-phase-1/tests/integration/: test_cli.py  test_quickstart_validation.py
todo-phase-1/tests/unit/: test_task.py  test_todo_manager.py  test_todo_manager_extended.py
(+7 files in other folders)
