[project]
name = "todo-cli-app"
version = "0.1.0"
description = "A command-line todo application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "main:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]